[package]
name = "steering-behaviours"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.0"
glam = "0.15.2"
log = "0.4.14"

[dependencies.simple_logger]
version = "1.12.1"
default-features = false
features = ["colors"]